# VERON_NEPVEUX_PROJECT

./: .coverage  .gitignore  README.md  donnees_audi.json  donnees_bmw.json  donnees_test.json  pyproject.toml
tests/: .coverage  test_conversion_df.py  test_entrainement_et_selection.py  test_scrapping.py
veron_nepveux_project/: __main__.py  conversion_df.py  donnees.json  donnees_Fiat.json  donnees_UI.json  donnees_citroen.json  donnees_fiat.json  donnees_opel.json  donnees_peugeot.json  donnees_temp.json  donnees_test.json  entrainement_et_selection.py  executable.py  exploration.ipynb  interface.ui  interface_estimation.py  main.py  meilleur_estimateur.pkl  panda.ipynb  projet_dev.ipynb  scraping.py  scrapping.py
