[tool.poetry]
name = "veron-nepveux-project"
version = "0.1.0"
description = ""
authors = ["Mathieu <mathieuveron@outlook.fr>"]
readme = "README.md"
packages = [{include = "veron_nepveux_project"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.990"
black = "^22.10.0"
pylama = "^8.4.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
