[tool.poetry]
name = "veron-nepveux-project"
version = "0.1.0"
description = ""
authors = ["Mathieu <mathieuveron@outlook.fr>, Baptiste <baptiste.nepveux@icloud.com>"]
readme = "README.md"
packages = [{include = "veron_nepveux_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pyqt6 = "^6.4.0"
qt-material = "^2.12"
rich = "^13.0.1"
scikit-learn = "^1.2.0"
numpy = "^1.24.1"
pandas = "^1.5.2"
typer = "^0.7.0"
selenium = "^4.7.2"
webdriver-manager = "^3.8.5"
pyserde = "^0.9.7"
serde = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.990"
black = "^22.10.0"
pylama = "^8.4.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"